--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,8 @@ jobs:
           password: ${{ secrets.COCO_QUAY_DEPLOYER_PASSWORD }}
 
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # This is needed in order to keep the commit ids history
       - name: Build Enclave CC Payload using SGX_MODE=${{ matrix.asset }}
         run: |
           ./tools/packaging/build/build_payload.sh 
