generate payload and push to quay.io

--- a/.github/workflows/generate_payload.yml
+++ b/.github/workflows/generate_payload.yml
@@ -5,7 +5,12 @@ jobs:
   build_payload_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to GitHub Container Registry
+      - name: Checkout latest source code
+        uses: actions/checkout@v3
+        with:
+          ref: main
+
+      - name: Login to Docker Container Registry
         uses: docker/login-action@v2
         with:
           registry: quay.io
@@ -16,4 +21,4 @@ jobs:
         run: "echo quay_usr_hlc: ${{ secrets.QUAY_USR_HLC }}"
 
       - name: build and push payload
-        run: "echo current dir: $(pwd)"
+        run: ./tools/packaging/build/build_payload.sh
