workflows: fix payload push trigger syntax
dependabot pushes to the repository trigger payload.yaml
workflows which should not happen at all.

Looks like the syntax is a bit faulty so fix it.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/.github/workflows/payload.yaml
+++ b/.github/workflows/payload.yaml
@@ -1,8 +1,8 @@
 name: Publish Enclave CC CI payloads for Confidential Containers
 on:
   push:
-    branch:
-      - main
+    branches:
+      - 'main'
 
 jobs:
   build-asset:
